# lastfm-auto-scrobbler

./: .dockerignore  .gitignore  Dockerfile  config.json  main.py  pyproject.toml  requirements.txt  temp.py
src/: __init__.py  config.json  configHandler.py  lastfmClient.py  main.py  scrobble.py  scrobbleManager.py
