[project]
name = "lastfm-auto-scrobbler"
version = "2.0.1"
description = "lastfm auto scrobbler"
authors = [
    {name = "driannsa",email = "muhandreop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pylast (>=5.2.0)",
    "python-dotenv (>=1.0.0)",
    "colorama (>=0.4.6)",
    "requests (>=2.32.5,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
